--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.7.2",
         "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/vite": "^4.1.1",
         "@vitejs/plugin-vue": "^5.2.1",
@@ -32,6 +33,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "echarts": "^5.6.0",
+        "flatpickr": "^4.6.13",
         "laravel-vite-plugin": "^1.0",
         "lucide-vue-next": "^0.468.0",
         "reka-ui": "^2.2.0",
@@ -42,6 +44,7 @@
         "vite": "^6.2.0",
         "vue": "^3.5.13",
         "vue-echarts": "^7.0.3",
+        "vue-flatpickr-component": "^12.0.0",
         "ziggy-js": "^2.4.2"
     },
     "optionalDependencies": {
